# fast-api-template

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
payments_app/: crud.py  main.py  models.py  schemas.py  settings.py  tasks.py
payments_app/adapters/: database.py  ques.py
payments_app/routers/: auth.py  transactions.py
tests/integration/: test_healthcheck.py
